--- a/index.html
+++ b/index.html
@@ -8,36 +8,22 @@
         body {
             font-family: Arial, sans-serif;
         }
-        .whatsapp-float {
-            position: fixed;
-            width: 60px;
-            height: 60px;
-            bottom: 20px;
-            right: 20px;
-            background-color: #25d366;
-            color: white;
-            border-radius: 50%;
+        h1 {
             text-align: center;
-            font-size: 30px;
-            box-shadow: 2px 2px 3px #999;
-            z-index: 100;
-            cursor: pointer;
+            margin-top: 50px;
         }
-        .whatsapp-float i {
-            margin-top: 15px;
+        p {
+            text-align: center;
+            font-size: 18px;
         }
     </style>
 </head>
 <body>
 <h1>Demo: WhatsApp Support Chat</h1>
-<p>Click the button to chat with us on WhatsApp.</p>
+<p>Click the floating WhatsApp button to start chatting!</p>
 
-<!-- Floating WhatsApp button -->
-<a
-        href="https://wa.me/1234567890?text=Hello%20Support%20Team%2C%20I%20need%20help!"
-        class="whatsapp-float"
-        target="_blank">
-    <i>💬</i>
-</a>
+<!-- GetButton.io Chat Widget -->
+<script defer src="https://static.getbutton.io/widget/bundle.js?id=JZoYA"></script>
+
 </body>
 </html>
