--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
         }
         h1 {
             text-align: center;
@@ -22,8 +24,20 @@
 <h1>Demo: WhatsApp Support Chat</h1>
 <p>Click the floating WhatsApp button to start chatting!</p>
 
-<!-- GetButton.io Chat Widget -->
-<script defer src="https://static.getbutton.io/widget/bundle.js?id=JZoYA"></script>
-
+<!-- GetButton.io Floating WhatsApp Widget -->
+<script defer>
+    (function () {
+        var options = {
+            whatsapp: "+1234567890", // Replace with your number
+            call_to_action: "Message us", // Button text
+            position: "right", // 'right' or 'left'
+            pre_filled_message: "Hello! I need support.", // Optional
+        };
+        var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host + "/widget/bundle.js";
+        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url;
+        s.onload = function () { WhWidgetSendButton.init(options); };
+        var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+    })();
+</script>
 </body>
 </html>
