--- a/index.html
+++ b/index.html
@@ -25,19 +25,18 @@
 <p>Click the floating WhatsApp button to start chatting!</p>
 
 <!-- GetButton.io Floating WhatsApp Widget -->
+<script defer src="https://static.getbutton.io/widget/bundle.js?id=JZoYA"></script>
 <script defer>
-    (function () {
-        var options = {
-            whatsapp: "+1234567890", // Replace with your number
-            call_to_action: "Message us", // Button text
-            position: "right", // 'right' or 'left'
-            pre_filled_message: "Hello! I need support.", // Optional
-        };
-        var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host + "/widget/bundle.js";
-        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url;
-        s.onload = function () { WhWidgetSendButton.init(options); };
-        var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
-    })();
+    window.onload = function() {
+        if (typeof WhWidgetSendButton !== "undefined") {
+            WhWidgetSendButton.init({
+                whatsapp: "+1234567890", // Replace with your number
+                call_to_action: "Message us", // Button text
+                position: "right", // 'right' or 'left'
+                pre_filled_message: "Hello! I need support.", // Optional
+            });
+        }
+    };
 </script>
 </body>
 </html>
